--- a/app/views/supplies/show.html.erb
+++ b/app/views/supplies/show.html.erb
@@ -6,7 +6,7 @@
   <%= render partial: 'donate', locals:{supply:@supply}%>
   <%else%>
 
-    <h2> Thank you for donating towards: <bold> <%= @supply.name </bold> %> </h2>
+    <h2> Thank you for donating towards: <bold> <%= @supply.name %> </bold></h2>
 
 <%end%>
 
@@ -15,7 +15,6 @@
 
 <br>
 
-<h1> @supply.name</h1> 
 
 
 <br>
