edited css on heading

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,11 @@
  */
 
  @import url('https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light');
+ @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+body{
+    margin: 0;
+}
  .error_explanation {
    color: red;
    background-color: white;
@@ -37,11 +41,16 @@
      margin: 0;
      padding: 0;
      overflow: hidden;
-     background-color: #004d4d;
      border-radius: 15px;
  }
 
-
+.heading{
+    font-family: "Bebas Neue", cursive;
+    background-color: #004d4d;
+    opacity: 0.9;
+    height: 25vw;
+    margin: 0;
+}
 
  .header-list{
      float: left;
@@ -66,8 +75,7 @@
  h1 {
    margin-top: 40px;
    text-align: center;
-   font-family: "Shadows Into Light", cursive;
-   font-size: 120px;
-   color: 	 #004d99;
+   font-size: 80px;
+   color: 	 white;
 
  }
