--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <ul class = "header">
-    <li class = "header-list"> <%= link_to "Tools For School Home", root_path%> </li>
-  
+    <div class="heading">
+        <ul class = "header">
+    <li class = "header-list"> <%= link_to "Home", root_path%> </li>
     <% if current_user%>
       <li class = "header-list"> Signed in as <%=current_user.email%> </li>
       <li class = "header-list"> <%=link_to "Sign Out", users_signout_path%> </li>
@@ -18,6 +18,8 @@
       <li class = "header-list"> <%= link_to "Sign In", new_user_session_path%></li>
     <%end%>
   </ul>
+    <h1> Tools For School </h1> 
+  </div>
 <%= yield %>
 
 </body>
